分环境配置文件

--- a/puppet.conf
+++ b/puppet.conf
@@ -8,16 +8,16 @@
 	environment = development,testing,production
 
 [development]
-	manifest = /etc/puppet/manifests/development/site.pp
-	modulepath = /etc/puppet/modules/development
-	fileserverconfig = /etc/puppet/fileserver.conf.development
+	#manifest = /etc/puppet/manifests/development/site.pp
+	#modulepath = /etc/puppet/modules/development
+	#fileserverconfig = /etc/puppet/fileserver.conf.development
 
 [testing]
-        manifest = /etc/puppet/manifests/testing/site.pp
-        modulepath = /etc/puppet/modules/testing
-        fileserverconfig = /etc/puppet/fileserver.conf.testing
+        #manifest = /etc/puppet/manifests/testing/site.pp
+        #modulepath = /etc/puppet/modules/testing
+        #fileserverconfig = /etc/puppet/fileserver.conf.testing
 
 [production]
-        manifest = /etc/puppet/manifests/production/site.pp
-        modulepath = /etc/puppet/modules/production
-        fileserverconfig = /etc/puppet/fileserver.conf.production
+        #manifest = /etc/puppet/manifests/production/site.pp
+        #modulepath = /etc/puppet/modules/production
+        #fileserverconfig = /etc/puppet/fileserver.conf.production
